--- a/back.html
+++ b/back.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="back.css">
     <title>Hlw bangladesh tumi kemon asoo...?</title>
 </head>
 <body>
 
     <h1>What about you...?</h1>
+    <h2>there is no option for my life so i will some people for the mian people...</h2>
     
 </body>
 </html>
